--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
     <link href="./css/reset.css" rel="stylesheet" />
     <link href="./css/normalize.css" rel="stylesheet" />
+    <link href="./css/fonts/poppins/stylesheet.css" />
     <link href="./css/base.css" rel="stylesheet" />
   </head>
   <body></body>
 </html>
+
+
+
+<li><a href="Listings.html">Listings</a></li>
+<li><a href="Newsroom.html">Newsroom</a></li>
+<li><a href="Contact.html">Contact</a></li>
+<li><a href="Out team .html">Out team</a></li>
