--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Estate</title>
     <link href="./css/reset.css" rel="stylesheet" />
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/fonts/poppins/stylesheet.css" />
     <link href="./css/base.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+<header class = "header"> 
+  <img src="/images/logo.svg" alt="logo" class="logo-header">
+  <nav class="nav">
+    <ul class="menu">
+    <li class="menu-item"><a href="Listings.html">Listings</a></li>
+    <li class="menu-item"><a href="Newsroom.html">Newsroom</a></li>
+    <li class="menu-item"><a href="Contact.html">Contact</a></li>
+    <li class="menu-item"><a href="Ourteam.html">Our team</a></li>
+  </ul>
+  </nav>
+</header>
+
+  </body>
 </html>
 
 
 
-<li><a href="Listings.html">Listings</a></li>
-<li><a href="Newsroom.html">Newsroom</a></li>
-<li><a href="Contact.html">Contact</a></li>
-<li><a href="Out team .html">Out team</a></li>
+
