--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
     <link href="./css/base.css" rel="stylesheet" />
   </head>
   <body>
-<header class = "header"> 
-  <img src="/images/logo.svg" alt="logo" class="logo-header">
-  <nav class="nav">
-    <ul class="menu">
-    <li class="menu-item"><a href="Listings.html">Listings</a></li>
-    <li class="menu-item"><a href="Newsroom.html">Newsroom</a></li>
-    <li class="menu-item"><a href="Contact.html">Contact</a></li>
-    <li class="menu-item"><a href="Ourteam.html">Our team</a></li>
-  </ul>
-  </nav>
-</header>
-
+    <header class="header">
+      <img src="images/logo.svg" alt="logo" class="logo-header" />
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu-item"><a href="Listings.html">Listings</a></li>
+          <li class="menu-item"><a href="Newsroom.html">Newsroom</a></li>
+          <li class="menu-item"><a href="Contact.html">Contact</a></li>
+          <li class="menu-item"><a href="Ourteam.html">Our team</a></li>
+        </ul>
+      </nav>
+    </header>
+    <img src="images/Frame.png" alt="" />
+    <div>OUR GOAL</div>
+    <p>We are dedicated to finding a house that you'll love.</p>
   </body>
 </html>
-
-
-
-
