--- a/index.html
+++ b/index.html
@@ -1,92 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Estate</title>
+    <link href="./css/reset.css" rel="stylesheet" />
+    <link href="./css/normalize.css" rel="stylesheet" />
+    <link href="./css/fonts/poppins/stylesheet.css" />
+    <link href="./css/base.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Estate</title>
-  <link href="./css/reset.css" rel="stylesheet" />
-  <link href="./css/normalize.css" rel="stylesheet" />
-  <link href="./css/fonts/poppins/stylesheet.css" />
-  <link href="./css/base.css" rel="stylesheet" />
-</head>
-
-<body>
-  <header class="header">
-    <img src="images/logo.svg" alt="logo" class="logo-header" />
-    <nav class="nav">
-      <ul class="menu">
-        <li class="menu-item"><a href="Listings.html">Listings</a></li>
-        <li class="menu-item"><a href="Newsroom.html">Newsroom</a></li>
-        <li class="menu-item"><a href="Contact.html">Contact</a></li>
-        <li class="menu-item"><a href="Ourteam.html">Our team</a></li>
-      </ul>
-    </nav>
-  </header>
-  <img src="images/Frame.png" alt="" class="banner" />
-  <div class="we">
-    <div class="we-left">
-      <div class="goal">OUR GOAL</div>
-      <p class="goal-text">We are dedicated <br>to finding a house <br>that you'll love.</p>
-    </div>
-    <div class="we-right">
-      <p class="we-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
-        Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean
-        faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
-      </p>
-      <p class="we-text">
-        Interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
-        imperdiet. Nunc ut sem vitae risus tristique posuere.
-      </p>
-      <div class="we-avtor">
-        <img src="/images/ava.png" alt="" class="ava">
-        <div class="person">
-          <div class="we-name">
-            Ava Orn
-          </div>
-          <div class="we-broker">
-            MANAGING BROKER
+  <body>
+    <header class="header">
+      <img src="images/logo.svg" alt="logo" class="logo-header" />
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu-item"><a href="Listings.html">Listings</a></li>
+          <li class="menu-item"><a href="Newsroom.html">Newsroom</a></li>
+          <li class="menu-item"><a href="Contact.html">Contact</a></li>
+          <li class="menu-item"><a href="Ourteam.html">Our team</a></li>
+        </ul>
+      </nav>
+    </header>
+    <img src="images/Frame.png" alt="" class="banner" />
+    <div class="we">
+      <div class="we-left">
+        <div class="goal">OUR GOAL</div>
+        <p class="goal-text">
+          We are dedicated <br />to finding a house <br />that you'll love.
+        </p>
+      </div>
+      <div class="we-right">
+        <p class="we-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          varius enim in eros elementum tristique. Duis cursus, mi quis viverra
+          ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+          Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc
+          ut sem vitae risus tristique posuere.
+        </p>
+        <p class="we-text">
+          Interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus
+          nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae
+          risus tristique posuere.
+        </p>
+        <div class="we-avtor">
+          <img src="/images/ava.png" alt="" class="ava" />
+          <div class="person">
+            <div class="we-name">Ava Orn</div>
+            <div class="we-broker">MANAGING BROKER</div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <H1>Our requirements</H1>
-  <H2>How we choose our listings.</H2>
-  <H3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nullam scelerisque aliquam odio et faucibus.</H3>
-  <div class="block1">
-    <img src="/images/city.png" alt="" class="block1-img">
-    <div class="block1-right">
-      <div class="block1-plus">
-        <img src="/images/local.png" alt="" class="block1-icon">
-        <p class="block1-name">Stellar locations</p>
-        <p class="block1-text">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</p>
-      </div>
-      <div class="block1-plus">
-        <img src="/images/dosto.png" alt="" class="block1-icon">
-        <p class="block1-name">High quality builds</p>
-        <p class="block1-text">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</p>
-      </div>
-      <div class="block1-plus">
-        <img src="/images/stul.png" alt="" class="block1-icon">
-        <p class="block1-name">Expert interior design</p>
-        <p class="block1-text">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</p>
+    <h1>Our requirements</h1>
+    <h2>How we choose our listings.</h2>
+    <h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />Nullam
+      scelerisque aliquam odio et faucibus.
+    </h3>
+    <div class="block1">
+      <img src="/images/city.png" alt="ghtr" class="block1-img" />
+      <div class="block1-right">
+        <div class="block1-plus">
+          <img src="/images/local.png" alt="fhhd" class="block1-icon" />
+          <p class="block1-name">Stellar locations</p>
+          <p class="block1-text">
+            Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="block1-plus">
+          <img src="/images/dosto.png" alt="httgh" class="block1-icon" />
+          <p class="block1-name">High quality builds</p>
+          <p class="block1-text">
+            Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="block1-plus">
+          <img src="/images/stul.png" alt="hg" class="block1-icon" />
+          <p class="block1-name">Expert interior design</p>
+          <p class="block1-text">
+            Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-  <img src="/images/dom.png" alt="" class="banner">
-  <div class="block2">
-    <H1 style="text-align: left;">Current listings</H1>
-    <H2 style="text-align: left;">What we have in store for you.</H2>
-    <H3 style="text-align: left;">Morbi neque ex, condimentum dapibus congue et, vulputate <br>ut ligula.
-      Vestibulum sit
-      amet urna turpis. Mauris
-      euismod elit et <br>nisi ultrices, ut faucibus orci tincidunt.</H3>
-  </div>
-
-</body>
-
-
+    <img src="/images/dom.png" alt="hss" class="banner" />
+    <div class="block2">
+      <h1 style="text-align: left">Current listings</h1>
+      <h2 style="text-align: left">What we have in store for you.</h2>
+      <h3 style="text-align: left">
+        Morbi neque ex, condimentum dapibus congue et, vulputate ut <br />
+        ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et
+        <br />nisi ultrices, ut faucibus orci tincidunt.
+      </h3>
+    </div>
+    <img src="images/room.png" alt="" class="prodaga" />
+    <div class="block3">
+    <h1 style="text-align: left">HOUSE</h1>
+    <h2 style="text-align: left">California St.</h2>
+          <li class="menu-item"><a href="beds.html">beds</a></li>
+          <img src="/images/bed.svg" alt="" class="bed"> 
+          <li class="menu-item"><a href="bathroom.html">bathroom</a></li>
+          <img src="/images/vanna.svg" alt="">
+          <li class="menu-item"><a href="room.html">room</a></li>
+          <img src="/images/dver.svg" alt="">
+         
+          <img src="/images/doma.png" alt="">
+          
+  </body>
 </html>
